<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCreaLista">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/et_NombreListaModificar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_pido_nombre_lista"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:text=""
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal"
            android:autofillHints=""
            android:screenReaderFocusable="false"/>

        <EditText
            android:id="@+id/tx_nombreProductoModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_NombreListaModificar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/txt_AgregarProductoNombre"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_agregarModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tx_nombreProductoModificar"
            android:layout_alignBottom="@id/tx_nombreProductoModificar"
            android:layout_toEndOf="@id/tx_nombreProductoModificar"
            android:text="@string/btn_AgregarALista"
            android:background="@drawable/boton_custom"
            android:textColor="#FFF"/>

        <ListView
            android:id="@+id/listaViewModificar"
            android:layout_width="wrap_content"
            android:layout_height="272dp"
            android:layout_below="@id/tx_nombreProductoModificar"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" >

        </ListView>

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/listaViewModificar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:text="@string/btn_ActualizarLista"
            android:background="@drawable/boton_custom"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/btn_EliminarModifica"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_guardar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="@string/btn_EliminarLista"
            android:background="@drawable/boton_custom"
            android:textColor="#FFF"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>