<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCreaLista">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/et_NombreLista"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_pido_nombre_lista"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:text=""
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal"
            android:autofillHints="" />

        <EditText
            android:id="@+id/tx_nombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_NombreLista"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/txt_AgregarProductoNombre"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tx_nombreProducto"
            android:layout_alignBottom="@id/tx_nombreProducto"
            android:layout_toEndOf="@id/tx_nombreProducto"
            android:text="@string/btn_AgregarALista" />

        <ListView
            android:id="@+id/listaView"
            android:layout_width="wrap_content"
            android:layout_height="272dp"
            android:layout_below="@id/tx_nombreProducto"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" >

        </ListView>

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listaView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:onClick="guardarLista"
            android:text="@string/btn_GuardarLista" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>